--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -56,6 +56,12 @@
   border-radius: 50%;
   background: #FE996F;
 }
+.createButton {
+  position: absolute;
+  top: 580rpx;
+  left: 50%;
+  transform: translateX(-50%);
+}
 .tomato-wrapper{
   flex: 1;
   margin-top: 66rpx;
@@ -64,7 +70,7 @@
 .tomato-wrapper .tomato{
   background: #EEF7F6;
   border-radius: 8rpx;
-  box-shadow: 0px -2px 8px 0px rgba(0,0,0,0.10);
+  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.10);
   height: 473rpx;
   display: flex;
   flex-direction: column;
