首页到番茄页

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -9,9 +9,9 @@
   </scroll-view>
   <x-button class="createButton" text="创建任务" size="default" type="change" bindtap="showConfirm"></x-button>
   <view class="tomato-wrapper">
-    <view class="tomato">
+    <navigator class="tomato" url="/pages/tomato/tomato">
       <x-clock text="点击开始番茄"></x-clock>
-    </view>
+    </navigator>
   </view>
   <x-confirm visible="{{visibleConfirm}}" placeholder="你想做什么？"  bindconfirm="createConfirm" bindcancel="hideConfirm"></x-confirm>
 </view>
